<resources>
    <string name="app_name">SomeFlowChallenge</string>
    <string name="email_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="phone_hint">Phone Number</string>
    <string name="password_create_hint">Must be 6+ characters long, with at least 1 each for lowercase and uppercase letter, number, and special character (@#$%^-_!+=)</string>
    <string name="retype_password_hint">Retype Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="send_button">Send</string>
    <string name="analytics_text">Analytics</string>
    <string name="chat_text">Chat</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="company">Vorwärts</string>
    <string name="vertical_bar">Vertical Bar</string>
    <string name="horizontal_bar">Horizontal Bar</string>
    <string name="one_line">One Line</string>
    <string name="two_line">Two Line</string>
    <string name="pie_chart">Pie Chart</string>
</resources>
