<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:padding="20dp"
    tools:context="com.jakester.someflowchallenge.fragments.RegisterFragment">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:padding="10dp"
        android:hint="@string/email_hint"
        android:background="@drawable/edittext_login_register" />

    <EditText
        android:id="@+id/et_password"
        android:layout_below="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:hint="@string/password_hint"
        android:background="@drawable/edittext_login_register"/>

    <TextView
        android:id="@+id/tv_password_create_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/password_create_hint"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/et_repeat_password"
        android:layout_below="@+id/tv_password_create_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:hint="@string/retype_password_hint"
        android:background="@drawable/edittext_login_register" />

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_below="@+id/et_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:maxLength="10"
        android:inputType="number"
        android:padding="10dp"
        android:hint="@string/phone_hint"
        android:background="@drawable/edittext_login_register" />

    <Button
        android:id="@+id/bt_register"
        android:layout_below="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorCompliment"
        android:layout_marginTop="20dp"
        android:text="@string/register_button"
        android:background="@drawable/button_flow_challenge" />

</RelativeLayout>
