<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:padding="20dp"
    tools:context="com.jakester.someflowchallenge.fragments.RegisterFragment">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:padding="10dp"
        android:hint="@string/email_hint"
        android:background="@drawable/edittext_login_register" />

    <EditText
        android:id="@+id/et_password"
        android:layout_below="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:padding="10dp"
        android:hint="@string/password_hint"
        android:background="@drawable/edittext_login_register"/>

    <Button
        android:id="@+id/bt_login"
        android:layout_below="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_button"
        android:background="@drawable/button_login_register" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:layout_below="@+id/bt_login"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
